Fixed UI Changes

--- a/Managment/Views/Admin/Email.cshtml
+++ b/Managment/Views/Admin/Email.cshtml
@@ -23,7 +23,7 @@
                     <input asp-for="Email" type="text" name="Email" id="Email" placeholder="Email" />
                     <span asp-validation-for="Email" class="text-danger"></span>
                 </div>
-                 <button type="submit">Set Password</button>
+                 <button type="submit">Send Email</button>
             </form>
         </div>
 
