--- a/Managment/Views/Shared/_Layout.cshtml
+++ b/Managment/Views/Shared/_Layout.cshtml
@@ -31,6 +31,12 @@
                                 <a asp-controller="Admin" asp-action="Email">
                                     <input type="button" class="btn btn-success" value="Invite User" />
                                 </a>                 
+                            </li
+                            
+                            <li class="nav-item">
+                                <a asp-controller="Admin" asp-action="DisableUsers">
+                                    <input type="button" style="margin-left:10px" class="btn btn-danger" value="Disable Users" />
+                                </a>                 
                             </li>
                         }
                     </ul>
