--- a/Managment/Views/Account/ForgotPassword.cshtml
+++ b/Managment/Views/Account/ForgotPassword.cshtml
@@ -41,7 +41,7 @@
                     <input asp-for="Email" type="text" name="Email" id="Email" placeholder="Email" />
                     <span asp-validation-for="Email" class="text-danger"></span>
                 </div>
-                <button type="submit">Submit</button>
+                <button type="submit">Send Email</button>
             </form>
         </div>
 
