--- a/Managment/Views/HR/Index.cshtml
+++ b/Managment/Views/HR/Index.cshtml
@@ -2,7 +2,8 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+    Layout = "_Layout";
 }
-<p>Welcome HR</p>
+<h1>Welcome HR</h1>
 
-<a asp-action="Index" asp-controller="Project" class="btn btn-primary">View Projects Here</a>
+@* <a asp-action="Index" asp-controller="Project" class="btn btn-primary">View Projects Here</a> *@
