--- a/Managment/Views/Project/Index.cshtml
+++ b/Managment/Views/Project/Index.cshtml
@@ -7,12 +7,12 @@
     <script src="https://kit.fontawesome.com/0ace76c9cd.js" crossorigin="anonymous"></script>
 </head>
 
-<h1>Create New Project here.</h1>
+<h3>Detail View of the Project</h3>
 <br />
 
-<a asp-action="Add" asp-controller="Project" class="btn btn-primary">Add Project</a>
+@* <a asp-action="Add" asp-controller="Project" class="btn btn-primary">Add Project</a>
 <br />
-<br />
+<br /> *@
 
 <style>
     .custom-snapshot-img {
@@ -20,134 +20,161 @@
         height: 94.21px;
         object-fit: cover;
     }
+
+    .button-2 {
+        background-color: rgba(51, 51, 51, 0.05);
+        border-radius: 8px;
+        border-width: 0;
+        color: #333333;
+        cursor: pointer;
+        display: inline-block;
+        font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
+        font-size: 14px;
+        font-weight: 500;
+        line-height: 20px;
+        list-style: none;
+        margin: 0;
+        padding: 10px 12px;
+        text-align: center;
+        transition: all 200ms;
+        vertical-align: baseline;
+        white-space: nowrap;
+        user-select: none;
+        -webkit-user-select: none;
+        touch-action: manipulation;
+    }
 </style>
 
 
 
-<form asp-action="Search" method="get">
+@* <form asp-action="Search" method="get">
     <div style="display:flex">
         <h3><label for="searchInput">Search by Name:</label></h3>
         <input style="width: 335px" class="form-control" type="text" id="searchInput" name="value" />
         <button style="margin-left: 20px " class="btn btn-primary" type="submit" id="searchButton">Search</button>
     </div>
-</form>
+</form> *@
 
 <br />
 <br />
 
-@model Management.Common.Models.DTO.PaginatedList<Management.Common.Models.DTO.ProjectDto>
+@* @model Management.Common.Models.DTO.PaginatedList<Management.Common.Models.DTO.ProjectDto> *@
+@model Management.Common.Models.DTO.ProjectDto
 
 <div class="container-fluid">
     <div>
-        @if (Model.Items.Any())
+        @if (Model != null)
         {
-            @foreach (var project in Model.Items)
-            {
-                <div class="row mb-4">
-                    <!-- 1st Row -->
-                    <div class="col-md-4 mt-2">
-                        <img src="@project.LogoUrl" class="card-img img-fluid" alt="Project Logo">
-                    </div>
-                    <div class="col-md-4 mt-2">
-                        <div class="card-body">
-                            <h5 class="card-title">@project.Name</h5>
-                            <p class="card-text">@project.Description</p>
-                            <ul class="list-group list-group-flush">
-                                <li class="list-group-item"><strong>Start Date:</strong> @project.StartDate.ToShortDateString()</li>
-                                <li class="list-group-item"><strong>Status:</strong> @project.Status</li>
-                                <li class="list-group-item"><strong>Development Name:</strong> @project.DevelopmentName</li>
-                                <li class="list-group-item"><strong>Development URL:</strong> @project.DevelopmentUrl</li>
-                                <li class="list-group-item"><strong>Stage Name:</strong> @project.StageName</li>
-                                <li class="list-group-item"><strong>Stage URL:</strong> @project.StageUrl</li>
-                                <li class="list-group-item"><strong>Production Name:</strong> @project.ProductionName</li>
-                                <li class="list-group-item"><strong>Production URL:</strong> @project.ProductionUrl</li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-md-4 mt-2">
-                        <div class="card-body">
-                            <ul class="list-group list-group-flush">
-                                <li class="list-group-item">
-                                    <strong>Documentation:</strong>
-                                    <a href="@project.DocumentationUrl" target="_blank">
-                                        <img src="@project.DocumentationUrl" class="img-thumbnail img-fluid" alt="Documentation">
-                                    </a>
-                                </li>
-                                <li class="list-group-item">
-                                    <strong>Snapshots:</strong>
-                                    <div class="row">
-                                        @foreach (var snapshot in project.SnapShootsUrl)
-                                        {
-                                            <div class="col-md-6">
-                                                <a href="@snapshot" target="_blank">
-                                                    <img src="@snapshot" class="img-thumbnail custom-snapshot-img" alt="Snapshot">
-                                                </a>
-                                            </div>
-                                        }
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
+            <div class="row mb-4">
 
-                    <!-- 2nd Row -->
-                    <div class="col-md-6 mt-2">
-                        <div class="card-body">
-                            <li class="list-group-item">
-                                <strong>Tech Stack Used:</strong>
-                                @foreach (var techStack in project.TechStackUsed)
-                                {
-                                    <p>@techStack</p>
-                                }
-                            </li>
-                        </div>
+                <!-- 1st Row -->
+                <div class="col-md-4 mt-2 px-5">
+                    <img src="@Model.LogoUrl" class="card-img img-fluid" alt="Project Logo">
+                </div>
+                <div class="col-md-4 mt-2">
+                    <div class="card-body">
+                        <h5 class="card-title">@Model.Name</h5>
+                        <p class="card-text">@Model.Description</p>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item"><strong>Start Date:</strong> @Model.StartDate.ToShortDateString()</li>
+                            <li class="list-group-item"><strong>Status:</strong> @Model.Status</li>
+                            <li class="list-group-item"><strong>Development Name:</strong> @Model.DevelopmentName</li>
+                            <li class="list-group-item"><strong>Development URL:</strong> @Model.DevelopmentUrl</li>
+                            <li class="list-group-item"><strong>Stage Name:</strong> @Model.StageName</li>
+                            <li class="list-group-item"><strong>Stage URL:</strong> @Model.StageUrl</li>
+                            <li class="list-group-item"><strong>Production Name:</strong> @Model.ProductionName</li>
+                            <li class="list-group-item"><strong>Production URL:</strong> @Model.ProductionUrl</li>
+                        </ul>
                     </div>
-                    <div class="col-md-6 mt-2">
-                        <div class="card-body">
+                </div>
+                <div class="col-md-4 mt-2 px-5">
+                    <div class="card-body">
+                        <ul class="list-group list-group-flush">
                             <li class="list-group-item">
-                                <strong>Developers:</strong>
-                                @foreach (var developer in project.Developers)
-                                {
-                                    <p>@developer</p>
-                                }
-                            </li>
-                        </div>
-                    </div>
-
-                    <!-- 3rd Row -->
-                    <div class="col-md-12 mt-2">
-                        <div class="card-footer">
-                            <div class="btn-group">
-                                <a href="@Url.Action("Update", "Project", new { id = project.ProjectId })" class="btn btn-light">
-                                    <i class="fa-solid fa-pencil"></i> Edit
+                                <strong>Documentation:</strong>
+                                <a href="@Model.DocumentationUrl" target="_blank">
+                                    <img src="@Model.DocumentationUrl" class="img-thumbnail custom-snapshot-img" alt="Documentation">
                                 </a>
-                                <button class="btn btn-light" data-bs-toggle="modal" data-bs-target="#deleteModal">
-                                    <i class="fa-solid fa-trash"></i> Delete
+                            </li>
+                            <li class="list-group-item">
+                                <strong>Snapshots:</strong>
+                                <br />
+                                @foreach (var snapshot in Model.SnapShootsUrl)
+                                {
+                                    <img src="@snapshot" class="img-thumbnail custom-snapshot-img" alt="Snapshot">
+                                }
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <!-- 2nd Row -->
+                <div class="col-md-6 mt-2 px-5">
+                    <div class="card-body">
+                        <li class="list-group-item">
+                            <strong>Tech Stack Used:</strong>
+                            @foreach (var techStack in Model?.TechStackUsed?.FirstOrDefault()?.Split(","))
+                            {
+                                <button class="button-2" role="button">
+                                    @techStack
+                                    @* <i class="fa-solid fa-xmark"></i> *@
                                 </button>
-                            </div>
+                            }
+                        </li>
+                    </div>
+                </div>
+                @* <div class="col-md-6 mt-2">
+            <div class="card-body">
+            <li class="list-group-item">
+            <strong>Tech Stack Used:</strong>
+            @foreach (var techStack in Model.TechStackUsed)
+            {
+            <p>@techStack</p>
+            }
+            </li>
+            </div>
+            </div> *@
+                <div class="col-md-6 mt-2 px-5">
+                    <div class="card-body">
+                        <li class="list-group-item">
+                            <div><strong>Developers:</strong> <span>@String.Join(",", Model.Developers)</span> </div>
+                        </li>
+                    </div>
+                </div>
+
+                <!-- 3rd Row -->
+                <div class="col-md-12 mt-2">
+                    <div class="card-footer">
+                        <div class="btn-group">
+                            <a href="@Url.Action("Update", "Project", new { id = Model.ProjectId })" class="btn btn-light">
+                                <i class="fa-solid fa-pencil"></i> Edit
+                            </a>
+                            <button class="btn btn-light" data-bs-toggle="modal" data-bs-target="#deleteModal">
+                                <i class="fa-solid fa-trash"></i> Delete
+                            </button>
                         </div>
                     </div>
+                </div>
 
-                    <!-- Delete Confirmation Modal -->
-                    <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="deleteModalLabel">Delete Confirmation</h5>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
-                                    Are you sure you want to delete this project?
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                                    <a href="@Url.Action("Delete", "Project", new { id = project.ProjectId })" class="btn btn-danger">Delete</a>
-                                </div>
+                <!-- Delete Confirmation Modal -->
+                <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="deleteModalLabel">Delete Confirmation</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                Are you sure you want to delete this project?
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                                <a href="@Url.Action("Delete", "Project", new { id = Model.ProjectId })" class="btn btn-danger">Delete</a>
                             </div>
                         </div>
                     </div>
                 </div>
-            }
+            </div>
+
         }
         else
         {
@@ -158,7 +185,8 @@
     </div>
 </div>
 
-<div>
+
+@* <div>
     <nav aria-label="Page navigation">
         <ul class="pagination">
             @for (int i = 1; i <= (Model.TotalCount + Model.PageSize - 1) / Model.PageSize; i++)
@@ -171,6 +199,6 @@
             }
         </ul>
     </nav>
-</div>
+</div> *@
 
 
