--- a/Managment/Views/Project/Update.cshtml
+++ b/Managment/Views/Project/Update.cshtml
@@ -1,20 +1,22 @@
 ﻿@using Management.Common.Enum;
 @model Management.Common.Models.DTO.ProjectDto;
-@{
-    ViewBag.Statuses = new SelectList(Enum.GetValues(typeof(Status)));
-}
+
 @{
     Layout = "_accountLayout";
-}
-@{
+    ViewBag.Statuses = new SelectList(Enum.GetValues(typeof(Status)));
+    var users = ViewBag.Users;
     var techStackNames = ViewBag.TechStackNames as List<SelectListItem> ?? new List<SelectListItem>();
     var selectedTechStackNames = ViewBag.SelectedTechStackNames as List<SelectListItem> ?? new List<SelectListItem>();
     var logoUrl = ViewBag.Logo;
 
     var documentation = ViewBag.Documentation;
     var snapShootUrl = ViewBag.SnapShoot;
-
+    <script src="https://cdn.jsdelivr.net/npm/@@yaireo/tagify"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@@yaireo/tagify/dist/tagify.polyfills.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/@@yaireo/tagify/dist/tagify.css" rel="stylesheet" type="text/css" />
 }
+
+
 <head>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/bootstrap.tagsinput/0.4.2/bootstrap-tagsinput.css" />
@@ -27,7 +29,7 @@
 <h1>Update Project here</h1>
 
 <div class="container-fluid" style="margin-top: 50px;">
-    <div class="container" style="border: 2px solid #ccc; padding: 20px; border-radius: 10px; background-color: #F8F4EC;">
+    <div class="container-fluid" style="border: 2px solid #ccc; padding: 20px; border-radius: 10px; background-color: #FFFDF9;">
         <form id="formData">
             <div class="col-md-12 mb-4" style="margin-top: 55px;">
                 <div class="row no-gutters" style="margin-top: -50px;margin-bottom: 40px;">
@@ -38,7 +40,14 @@
                             <input id="FileUpload1" class="btn btn-secondary" value="ViewBag.Logo" type="file" asp-for="Logo" />
                             @if (ViewBag.Logo != null)
                             {
-                                <p>Selected Logo: <a href="@ViewBag.Logo" target="_blank">@ViewBag.Logo</a></p>
+                                <p>Selected Document:</p>
+                                <p>
+                                    <img target="_blank" src="@ViewBag.Logo" style=" height: 124px; width: 125px;">
+                                    <button type="button" class="close" aria-label="Close" onclick="deleteLogo('@ViewBag.Logo')">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </p>
+
                             }
                             <input id="ProjectId" hidden type="text" asp-for="ProjectId" />
 
@@ -94,18 +103,8 @@
                     </div>
                     <div class="col-4 mt-2">
                         <label asp-for="TechStackUsed">TechStackUsed</label>
-                        <select asp-for="TechStackUsed" class="form-control" name="TechStackUsed" type="text" id="txttags" data-role="tagsinput" multiple>
-                            @{
-                                var selectedValues = Model.TechStackUsed
-                                .SelectMany(ts => ts.Split(","))
-                                .ToList();
+                        <input name='input-custom-dropdown' class='some_class_name' placeholder='write some tags' value=''>
 
-                                foreach (var techStack in selectedValues)
-                                {
-                                    <option value="@techStack" selected="true">@techStack</option>
-                                }
-                            }
-                        </select>
 
 
 
@@ -115,9 +114,11 @@
                             <input id="FileUpload2" class="btn btn-secondary" type="file" asp-for="Documentation" />
                             @if (ViewBag.Documentation != null)
                             {
+                                <p>Selected Document:</p>
                                 <p>
-                                    Selected Documentation: <a href="@ViewBag.Documentation" target="_blank">@ViewBag.Documentation</a>
-                                    <button type="button" class="close" aria-label="Close" onclick="deleteDocumentation('@ViewBag.Documentation')">
+                                    
+                                    <img target="_blank" src="@Model.DocumentationUrl" style=" height: 124px; width: 125px;margin-top: 10px;">
+                                    <button type="button" class="close" aria-label="Close" onclick="deleteDocumentation('@Model.DocumentationUrl')">
                                         <span aria-hidden="true">&times;</span>
                                     </button>
                                 </p>
@@ -130,15 +131,18 @@
                             <input id="FileUpload3" class="btn btn-secondary" type="file" asp-for="SnapShoots" multiple />
                             @if (ViewBag.SnapShoot != null)
                             {
+                                <p>Selected SnapShoot:</p>
+
                                 foreach (var item in ViewBag.SnapShoot)
                                 {
-                                    <p>
-                                        Selected SnapShoot: <a href="@item" target="_blank">@item</a>
+                                    <div class="col-5">
+                                        <img target="_blank" src="@item" style=" height: 124px; width: 125px;">
                                         <button type="button" class="close" aria-label="Close" onclick="deleteSnapShoot('@item')">
                                             <span aria-hidden="true">&times;</span>
                                         </button>
-                                    </p>
+                                    </div>
                                 }
+
                             }
                         </div>
                     </div>
@@ -177,7 +181,7 @@
                     </div>
                     <br />
                     <div class="row">
-                        <button id="submitBtn" style="border-radius:10px;padding:10px;background-color:#AC7D88" type="button">Update</button>
+                        <button id="submitBtn" style="border-radius:10px;padding:10px;" class="btn btn-primary" type="button">Update</button>
                         <button id="cancelBtn" style="border-radius:10px;margin-top:12px; padding:10px;margin-bottom:-40px;" type="button">
                             Cancel
                         </button>
@@ -204,21 +208,64 @@
     debugger;
     document.getElementById("cancelBtn").addEventListener("click", function () {
         debugger;
-        window.location.href = "/Project/Index";
+        window.location.href = "/Project/ListView";
     });
 
+    var input = document.querySelector('input[name="input-custom-dropdown"]'),
+        tagify = new Tagify(input, {
+            whitelist: ["Dotnet", "React", "Angular"],
+            maxTags: 10,
+            dropdown: {
+                maxItems: 20,
+                classname: "tags-look",
+                enabled: 0,
+                closeOnSelect: false
+            }
+        })
+
+    var list = @Html.Raw(Json.Serialize(ViewBag.TechStackNames.Items));
+    tagify.addTags(list);
+    console.log(list + "list");
+    debugger;
+
+    input.addEventListener('change', onChange)
+
+    var values;
+    function onChange(e) {
+        try {
+            var parsedValues = JSON.parse(e.target.value);
+            values = parsedValues.map(obj => obj.value);
+            console.log(values);
+        } catch (error) {
+            console.error("Error parsing JSON:", error);
+        }
+    }
 
     let existingSnapShoots = @Html.Raw(Json.Serialize(ViewBag.SnapShoot));
     let existingDocuments = @Html.Raw(Json.Serialize(ViewBag.Documentation));
+    let existingLogo = @Html.Raw(Json.Serialize(ViewBag.Logo));
 
     let deletedSnapShoots = [];
     let deletedDocuments = [];
+    let deletedLogo = [];
+
+
+    function deleteLogo(documentPath) {
+        debugger;
+
+        deletedLogo.push(documentPath);
+        $(`img[src='${documentPath}']`).closest('p').remove();
+
+
+        console.log('Logo removed from UI');
+        console.log(existingLogo);
+    }
 
     function deleteDocumentation(documentPath) {
         debugger;
 
         deletedDocuments.push(documentPath);
-        $(`p:contains('${documentPath}')`).remove();
+        $(`img[src='${documentPath}']`).closest('p').remove();
 
 
         console.log('Document removed from UI');
@@ -229,7 +276,7 @@
         debugger;
 
         deletedSnapShoots.push(snapShootPath);
-        $(`p:contains('${snapShootPath}')`).remove();
+        $(`img[src='${documentPath}']`).closest('p').remove();
 
         existingSnapShoots.splice(existingSnapShoots.indexOf(snapShootPath), 1);
 
@@ -249,9 +296,11 @@
         var StartDate = document.getElementById('StartDate').value;
         var Status = formData.get('Statuses');
         var Description = document.getElementById('Description').value;
-        var TechStackUsed = $("#txttags option:selected").map(function () {
-            return $(this).val();
-        }).get();
+        var TechStackUsed = values;
+
+        // var TechStackUsed = $("#txttags option:selected").map(function () {
+        //     return $(this).val();
+        // }).get();
         var Documentation = document.getElementById('FileUpload2').files[0];
         // var SnapShoots = document.getElementById('FileUpload3').files[0];
 
@@ -288,6 +337,7 @@
         newFormData.append("ProductionUrl", ProductionUrl);
         newFormData.append("DeletedSnapShoots", deletedSnapShoots);
         newFormData.append("DeletedDocuments", deletedDocuments);
+        newFormData.append("DeletedLogo", deletedLogo);
         newFormData.append("Developers", Developers);
 
         debugger;
@@ -302,7 +352,7 @@
                 console.log('Data submitted successfully!', data);
                 debugger;
                 setTimeout(() => {
-                    var redirectUrl = "https://localhost:7222/Project/Index";
+                    var redirectUrl = "https://localhost:7222/Project/ListView";
                     window.location.href = redirectUrl;
                 }, 1000)
             },
