--- a/Managment/Views/Shared/_accountLayout.cshtml
+++ b/Managment/Views/Shared/_accountLayout.cshtml
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Management.styles.css" asp-append-version="true" />
+
 </head>
 <body>
    
-    <div class="container mt-5" style="margin-right: 703px ">
+    <div class="container mt-5" >
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
@@ -18,6 +19,9 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+
+    @* <script src="http://twitter.github.io/typeahead.js/releases/latest/typeahead.bundle.js"></script> *@
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-3-typeahead/4.0.2/bootstrap3-typeahead.min.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
